# vinyle

./: NEWS  meson.build
po/: de.po  (+3 more)
src/vinylelib/: application.py  browser.py  browsersong.py  client.py  event_emitter.py  lyrics.py  main_window.py  memory_usage.py  meson.build  models.py  mpris.py  search.py  sidebar_list_view.py
src/vinylelib/MPRIS/: __init__.py  interface.py  meson.build
src/vinylelib/album/: __init__.py  album.py  cover.py  list_row.py  meson.build  page.py
src/vinylelib/artist/: __init__.py  artist.py  artist_list.py  artist_selection_model.py  meson.build  role_dropdown.py
src/vinylelib/artist_album/: __init__.py  album_page.py  album_row.py  albums_page.py  artist_album.py  artist_album_list_row.py  artist_album_page.py  artist_albums_page.py  list_row.py  meson.build  row.py
src/vinylelib/browser/: browser.py  meson.build
src/vinylelib/browsersong/: __init__.py  list.py  meson.build  row.py
src/vinylelib/client/: __init__.py  client.py  meson.build
src/vinylelib/cover/: __init__.py  binary.py  cache.py  fallback.py  fallback_cover.py  file.py  meson.build
src/vinylelib/dialogs/: behaviour_preferences.py  server_info.py  view_preferences.py
src/vinylelib/models/: __init__.py  _list.py  meson.build  selection.py
src/vinylelib/pages/: __init__.py  album_page.py  albums_page.py  meson.build
src/vinylelib/player/: __init__.py  meson.build  playback_controls.py  player.py  player_bar.py  player_menu.py
src/vinylelib/playlist/: playlist_view.py
src/vinylelib/role/: __init__.py  meson.build  role.py  role_selection_model.py
(+41 files in other folders)
