# FIXME: find a way to include all python files from this directory
subdir('album')
subdir('browser')
subdir('browsersong')
subdir('client')
subdir('dialogs')
subdir('models')
subdir('MPRIS')
subdir('pages')
subdir('player')
subdir('playlist')
subdir('role')
subdir('role_album')
subdir('song')
subdir('utils')
subdir('views')
subdir('widgets')
install_headers(
'__init__.py', 'application.py', 'event_emitter.py', 'main_window.py', 'memory_usage.py', 'settings.py',
install_dir: 'bin/vinylelib')
